# glastis_com_back_yt_download

./: LICENSE  purge_dupes.lua
downloader/: CMakeLists.txt  Makefile  download.c  get_list_info.c  main.c  main.h  process.c  trace.c  utilities.c
downloader/header/: accepted_formats.h  download.h  get_list_info.h  main.h  process.h  trace.h  utilities.h
downloader/test/: vid_list.txt
